maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: type mismatch;
 found   : Unit
 required: Boolean
    return
    ^JediEscaper:33: error: type mismatch;
 found   : Unit
 required: Boolean
  return
  ^